--- a/css/style.css
+++ b/css/style.css
@@ -253,23 +253,30 @@ body ::-webkit-scrollbar {
     position: relative;
     overflow: hidden;
     transition: transform 0.5s;
-    border-radius: 3%;
+    border-radius: 20px;
 }
- 
-/* .img-content:hover img {
-    transform: scale(1.5);
-} */
 
 .image-resize {
     height: 280px;
     object-fit: cover;
     object-position: center;
+    border: solid;
+
+}
+
+.image-resize:hover {
+    border: 5px solid #157ace;
 }
 
 .image-resize-2 {
     height: 550px;
     object-fit: cover;
     object-position: center;
+    border: solid;
+}
+
+.image-resize-2:hover {
+    border: 5px solid #157ace;
 }
 
 .project-name {
